jazz and baseline

--- a/test_generate.ipynb
+++ b/test_generate.ipynb
@@ -2,10 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "id": "1e491e19",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/maximos/miniconda3/envs/torch/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
     "import torch.nn as nn\n",
@@ -20,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "id": "6ad30c26",
    "metadata": {},
    "outputs": [],
@@ -32,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "id": "6845a169",
    "metadata": {},
    "outputs": [],
@@ -44,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "02945c83",
    "metadata": {},
    "outputs": [
@@ -80,14 +89,13 @@
        ")"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# curriculum_type = 'random'\n",
-    "curriculum_type = 'base2'\n",
+    "curriculum_type = 'random'\n",
     "device_name = 'cuda:1'\n",
     "if device_name == 'cpu':\n",
     "    device = torch.device('cpu')\n",
@@ -110,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "id": "e9b8c333",
    "metadata": {},
    "outputs": [
@@ -135,17 +143,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "id": "797e6f56",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/maximos/miniconda3/envs/torch/lib/python3.12/site-packages/music21/stream/base.py:3694: Music21DeprecationWarning: .flat is deprecated.  Call .flatten() instead\n",
+      "  return self.iter().getElementsByClass(classFilterList)\n"
+     ]
+    }
+   ],
    "source": [
-    "encoded = tokenizer.encode(data_files[5023])"
+    "encoded = tokenizer.encode(data_files[1473])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "id": "dffcc448",
    "metadata": {},
    "outputs": [
@@ -163,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "id": "52a3756c",
    "metadata": {},
    "outputs": [],
@@ -175,10 +192,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "id": "cf7caa70",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "last_active_index: 243\n"
+     ]
+    }
+   ],
    "source": [
     "if curriculum_type == 'base2':\n",
     "    generated_harmony = structured_progressive_generate(\n",
@@ -188,10 +213,7 @@
     "        num_stages=10,\n",
     "        mask_token_id=tokenizer.mask_token_id,\n",
     "        temperature=1.0,\n",
-    "        strategy='sample',#'topk',\n",
-    "        pad_token_id=pad_token_id,      # token ID for <pad>\n",
-    "        nc_token_id=nc_token_id,       # token ID for <nc>\n",
-    "        force_fill=True         # disallow <pad>/<nc> before melody ends\n",
+    "        strategy='topk'\n",
     "    )\n",
     "else:\n",
     "    generated_harmony = random_progressive_generate(\n",
@@ -201,7 +223,7 @@
     "        num_stages=10,\n",
     "        mask_token_id=tokenizer.mask_token_id,\n",
     "        temperature=1.0,\n",
-    "        strategy='sample',# 'topk',\n",
+    "        strategy='topk',\n",
     "        pad_token_id=pad_token_id,      # token ID for <pad>\n",
     "        nc_token_id=nc_token_id,       # token ID for <nc>\n",
     "        force_fill=True         # disallow <pad>/<nc> before melody ends\n",
@@ -210,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "id": "30a895ca",
    "metadata": {},
    "outputs": [
@@ -219,9 +241,9 @@
      "output_type": "stream",
      "text": [
       "output_tokens\n",
-      "['F:min', 'F:min', 'F:min', 'F:min', 'F:min', 'F:min', 'F:min', 'F:min', 'F:min', 'F:min', 'F:min', 'F:min', 'F:min', 'F:min', 'F:min', 'F:min', 'G#:maj', 'G#:maj', 'G#:maj', 'G#:maj', 'G#:maj', 'G#:maj', 'G#:maj', 'G#:maj', 'G#:maj', 'G#:maj', 'G#:maj', 'G#:maj', 'G#:maj', 'G#:maj', 'G#:maj', 'G#:maj', 'F:min', 'F:min', 'F:min', 'F:min', 'F:min', 'F:min', 'F:min', 'F:min', 'F:min', 'F:min', 'F:min', 'F:min', 'F:min', 'F:min', 'F:min', 'F:min', 'G#:maj', 'G#:maj', 'G#:maj', 'G#:maj', 'G#:maj', 'G#:maj', 'G#:maj', 'G#:maj', 'G#:maj', 'G#:maj', 'G#:maj', 'G#:maj', 'G#:maj', 'G#:maj', 'G#:maj', 'G#:maj', 'F:min', 'F:min', 'F:min', 'F:min', 'F:min', 'F:min', 'F:min', 'F:min', 'F:min', 'F:min', 'F:min', 'F:min', 'F:min', 'F:min', 'F:min', 'F:min', 'G#:maj', 'G#:maj', 'G#:maj', 'G#:maj', 'G#:maj', 'G#:maj', 'G#:maj', 'G#:maj', 'G#:maj', 'G#:maj', 'G#:maj', 'G#:maj', 'G#:maj', 'G#:maj', 'G#:maj', 'G#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>']\n",
+      "['G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj']\n",
       "harmony_gt_tokens\n",
-      "['F:min', 'F:min', 'F:min', 'F:min', 'F:min', 'F:min', 'F:min', 'F:min', 'F:min', 'F:min', 'F:min', 'F:min', 'F:min', 'F:min', 'F:min', 'F:min', 'G#:maj', 'G#:maj', 'G#:maj', 'G#:maj', 'G#:maj', 'G#:maj', 'G#:maj', 'G#:maj', 'G#:maj', 'G#:maj', 'G#:maj', 'G#:maj', 'G#:maj', 'G#:maj', 'G#:maj', 'G#:maj', 'C#:maj', 'C#:maj', 'C#:maj', 'C#:maj', 'C#:maj', 'C#:maj', 'C#:maj', 'C#:maj', 'C#:maj', 'C#:maj', 'C#:maj', 'C#:maj', 'C#:maj', 'C#:maj', 'C#:maj', 'C#:maj', 'G#:maj', 'G#:maj', 'G#:maj', 'G#:maj', 'G#:maj', 'G#:maj', 'G#:maj', 'G#:maj', 'G#:maj', 'G#:maj', 'G#:maj', 'G#:maj', 'G#:maj', 'G#:maj', 'G#:maj', 'G#:maj', 'A#:min', 'A#:min', 'A#:min', 'A#:min', 'A#:min', 'A#:min', 'A#:min', 'A#:min', 'A#:min', 'A#:min', 'A#:min', 'A#:min', 'A#:min', 'A#:min', 'A#:min', 'A#:min', 'G#:maj', 'G#:maj', 'G#:maj', 'G#:maj', 'G#:maj', 'G#:maj', 'G#:maj', 'G#:maj', 'G#:maj', 'G#:maj', 'G#:maj', 'G#:maj', 'G#:maj', 'G#:maj', 'G#:maj', 'G#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>']\n"
+      "['B:7', 'B:7', 'B:7', 'B:7', 'B:7', 'B:7', 'B:7', 'B:7', 'B:7', 'B:7', 'B:7', 'B:7', 'B:7', 'B:7', 'B:min', 'B:min', 'B:min', 'B:min', 'B:min', 'B:min', 'B:min', 'B:min', 'B:min', 'B:min', 'B:min', 'B:min', 'B:min', 'B:min', 'B:min', 'B:min', 'B:min', 'B:min', 'A:maj', 'A:maj', 'A:maj', 'A:maj', 'A:maj', 'A:maj', 'A:maj', 'A:maj', 'A:maj', 'A:maj', 'A:maj', 'A:maj', 'A:maj', 'A:maj', 'A:maj', 'A:maj', 'F#:min7', 'F#:min7', 'F#:min7', 'F#:min7', 'F#:min7', 'F#:min7', 'F#:min7', 'F#:min7', 'F#:min7', 'F#:min7', 'F#:min7', 'F#:min7', 'F#:min7', 'F#:min7', 'F#:min7', 'F#:min7', 'F#:min7', 'F#:min7', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'B:min', 'B:min', 'B:min', 'B:min', 'B:min', 'B:min', 'B:min', 'B:min', 'B:min', 'B:min', 'B:min', 'B:min', 'B:min', 'B:min', 'B:min', 'B:min', 'A:maj', 'A:maj', 'A:maj', 'A:maj', 'A:maj', 'A:maj', 'A:maj', 'A:maj', 'A:maj', 'A:maj', 'A:maj', 'A:maj', 'A:maj', 'A:maj', 'A:maj', 'A:maj', 'F#:min7', 'F#:min7', 'F#:min7', 'F#:min7', 'F#:min7', 'F#:min7', 'F#:min7', 'F#:min7', 'F#:min7', 'F#:min7', 'F#:min7', 'F#:min7', 'F#:min7', 'F#:min7', 'F#:min7', 'F#:min7', 'F#:min7', 'F#:min7', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'B:min', 'B:min', 'B:min', 'B:min', 'B:min', 'B:min', 'B:min', 'B:min', 'B:min', 'B:min', 'B:min', 'B:min', 'B:min', 'B:min', 'B:min', 'B:min', 'A:maj', 'A:maj', 'A:maj', 'A:maj', 'A:maj', 'A:maj', 'A:maj', 'A:maj', 'A:maj', 'A:maj', 'A:maj', 'A:maj', 'A:maj', 'A:maj', 'A:maj', 'A:maj', 'F#:min7', 'F#:min7', 'F#:min7', 'F#:min7', 'F#:min7', 'F#:min7', 'F#:min7', 'F#:min7', 'F#:min7', 'F#:min7', 'F#:min7', 'F#:min7', 'F#:min7', 'F#:min7', 'F#:min7', 'F#:min7', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'B:min', 'B:min', 'B:min', 'B:min', 'B:min', 'B:min', 'B:min', 'B:min', 'B:min', 'B:min', 'B:min', 'B:min', 'B:min', 'B:min', 'B:min', 'B:min', 'A:maj', 'A:maj', 'A:maj', 'A:maj', 'A:maj', 'A:maj', 'A:maj', 'A:maj', 'A:maj', 'A:maj', 'A:maj', 'A:maj', 'A:maj', 'A:maj', 'A:maj', 'A:maj', 'F#:min7', 'F#:min7', 'F#:min7', 'F#:min7', 'F#:min7', 'F#:min7', 'F#:min7', 'F#:min7', 'F#:min7', 'F#:min7', 'F#:min7', 'F#:min7', 'F#:min7', 'F#:min7', 'F#:min7', 'F#:min7']\n"
      ]
     }
    ],
@@ -241,94 +263,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "id": "99e6d2cc",
    "metadata": {},
    "outputs": [],
    "source": [
     "score = overlay_generated_harmony(encoded['melody_part'], output_tokens, encoded['ql_per_quantum'], encoded['skip_steps'])\n",
     "save_harmonized_score(score, out_path=\"harmonized_output.mxl\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "id": "71459b63",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{0.0} <music21.metadata.Metadata object at 0x7aceb8df1640>\n",
-      "{0.0} <music21.stream.Part 0x7acebab98e60>\n",
-      "    {0.0} <music21.stream.Measure 1 offset=0.0>\n",
-      "        {0.0} <music21.instrument.Instrument 'P8c5eef371ce5c8abca1983b9a22b7cd7: '>\n",
-      "        {0.0} <music21.clef.TrebleClef>\n",
-      "        {0.0} <music21.tempo.MetronomeMark Quarter=174>\n",
-      "        {0.0} <music21.key.KeySignature of 7 sharps>\n",
-      "        {0.0} <music21.meter.TimeSignature 4/4>\n",
-      "        {0.0} <music21.note.Rest quarter>\n",
-      "        {1.0} <music21.note.Note F>\n",
-      "        {2.0} <music21.note.Note G#>\n",
-      "        {2.5} <music21.note.Note B->\n",
-      "        {3.5} <music21.note.Note C>\n",
-      "    {4.0} <music21.stream.Measure 2 offset=4.0>\n",
-      "        {0.0} <music21.note.Note C>\n",
-      "        {1.0} <music21.note.Note F>\n",
-      "        {2.0} <music21.note.Note G#>\n",
-      "        {2.5} <music21.note.Note B->\n",
-      "        {3.5} <music21.note.Note C>\n",
-      "    {8.0} <music21.stream.Measure 3 offset=8.0>\n",
-      "        {0.0} <music21.note.Note C>\n",
-      "        {1.0} <music21.note.Note F>\n",
-      "        {2.0} <music21.note.Note G#>\n",
-      "        {2.5} <music21.note.Note B->\n",
-      "        {3.5} <music21.note.Note C>\n",
-      "    {12.0} <music21.stream.Measure 4 offset=12.0>\n",
-      "        {0.0} <music21.note.Note C>\n",
-      "        {1.0} <music21.note.Note B->\n",
-      "        {1.5} <music21.note.Note B->\n",
-      "        {2.5} <music21.note.Note G#>\n",
-      "    {16.0} <music21.stream.Measure 5 offset=16.0>\n",
-      "        {0.0} <music21.note.Note G#>\n",
-      "        {2.0} <music21.note.Note F>\n",
-      "    {20.0} <music21.stream.Measure 6 offset=20.0>\n",
-      "        {0.0} <music21.note.Rest half>\n",
-      "        {2.0} <music21.note.Note C>\n",
-      "        {3.0} <music21.note.Note G#>\n",
-      "    {24.0} <music21.stream.Measure 7 offset=24.0>\n",
-      "        {0.0} <music21.note.Note F#>\n",
-      "        {1.0} <music21.note.Note G#>\n",
-      "        {1.5} <music21.note.Note B->\n",
-      "        {3.5} <music21.note.Note B->\n",
-      "        {4.0} <music21.bar.Barline type=final>\n",
-      "{0.0} <music21.stream.Part 0x7aceb8df0410>\n",
-      "    {0.0} <music21.stream.Measure 1 offset=0.0>\n",
-      "        {0.0} <music21.instrument.Instrument 'P8c5eef371ce5c8abca1983b9a22b7cd7: '>\n",
-      "        {0.0} <music21.clef.TrebleClef>\n",
-      "        {0.0} <music21.tempo.MetronomeMark Quarter=174>\n",
-      "        {0.0} <music21.key.KeySignature of 7 sharps>\n",
-      "        {0.0} <music21.meter.TimeSignature 4/4>\n",
-      "        {0.0} <music21.chord.Chord F3 A-3 C4>\n",
-      "    {4.0} <music21.stream.Measure 2 offset=4.0>\n",
-      "        {0.0} <music21.chord.Chord G#3 B#3 D#4>\n",
-      "    {8.0} <music21.stream.Measure 3 offset=8.0>\n",
-      "        {0.0} <music21.chord.Chord F3 A-3 C4>\n",
-      "    {12.0} <music21.stream.Measure 4 offset=12.0>\n",
-      "        {0.0} <music21.chord.Chord G#3 B#3 D#4>\n",
-      "    {16.0} <music21.stream.Measure 5 offset=16.0>\n",
-      "        {0.0} <music21.chord.Chord F3 A-3 C4>\n",
-      "    {20.0} <music21.stream.Measure 6 offset=20.0>\n",
-      "        {0.0} <music21.chord.Chord G#3 B#3 D#4>\n",
-      "    {24.0} <music21.stream.Measure 7 offset=24.0>\n",
-      "        {0.0} <music21.chord.Chord F#3 A#3 C#4>\n",
-      "        {1.0} <music21.bar.Barline type=final>\n"
-     ]
-    }
-   ],
-   "source": [
-    "score.show('t')"
    ]
   }
  ],
