--- a/test_baseline.ipynb
+++ b/test_baseline.ipynb
@@ -16,7 +16,7 @@
     }
    ],
    "source": [
-    "import baseline_models as bm\n",
+    "from baseline_models import BaselineModeller\n",
     "import numpy as np\n",
     "import os"
    ]
@@ -24,6 +24,16 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "9efa20b3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bm = BaselineModeller(data_dir = '/media/maindisk/maximos/data/gjt_melodies/Library_melodies/', device_name='cpu')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "85a1d7e0",
    "metadata": {},
    "outputs": [
@@ -44,32 +54,12 @@
     }
    ],
    "source": [
-    "# gpt_model, gpt_dataset = bm.get_gpt2_and_dataset()\n",
-    "\n",
-    "# d = gpt_dataset[11]\n",
-    "# start_harmony_position = np.where( d['input_ids'] == bm.baseline_tokenizer.vocab['<h>'] )[0][0]\n",
-    "# input_ids = d['input_ids'][:(start_harmony_position+1)]#.to(device)\n",
-    "# print(d.keys())\n",
-    "# print(input_ids)\n",
-    "\n",
-    "# outputs = gpt_model.generate(\n",
-    "#     input_ids=input_ids.reshape(1, input_ids.shape[0]),\n",
-    "#     eos_token_id=bm.baseline_tokenizer.eos_token_id,\n",
-    "#     max_length=gpt_model.config.max_position_embeddings,\n",
-    "#     num_beams=5,\n",
-    "#     do_sample=True,\n",
-    "#     temperature=1\n",
-    "# )\n",
-    "\n",
-    "# output_tokens = [bm.baseline_tokenizer.ids_to_tokens[t] for t in outputs[0].tolist()]\n",
-    "\n",
-    "# bm.baseline_tokenizer.decode(output_tokens, output_format='file', output_path=os.getcwd()+'/gpt2test.mxl')\n",
     "bm.generate_save_with_gpt2_baseline(28, os.getcwd()+'/test_gpt2.mxl')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "53c81b16",
    "metadata": {},
    "outputs": [
@@ -90,25 +80,6 @@
     }
    ],
    "source": [
-    "# bart_model, bart_dataset = bm.get_bart_and_dataset()\n",
-    "\n",
-    "# d = bart_dataset[11]\n",
-    "# input_ids = d['input_ids']#.to(device)\n",
-    "# print(d.keys())\n",
-    "# print(input_ids)\n",
-    "\n",
-    "# outputs = bart_model.generate(\n",
-    "#     input_ids=input_ids.reshape(1, input_ids.shape[0]),\n",
-    "#     eos_token_id=bm.baseline_tokenizer.eos_token_id,\n",
-    "#     max_length=gpt_model.config.max_position_embeddings,\n",
-    "#     num_beams=5,\n",
-    "#     do_sample=True,\n",
-    "#     temperature=1\n",
-    "# )\n",
-    "\n",
-    "# output_tokens = [bm.baseline_tokenizer.ids_to_tokens[t] for t in input_ids.tolist()] + [bm.baseline_tokenizer.ids_to_tokens[t] for t in outputs[0].tolist()[1:]]\n",
-    "# print(output_tokens)\n",
-    "# bm.baseline_tokenizer.decode(output_tokens, output_format='file', output_path=os.getcwd()+'/barttest.mxl')\n",
     "bm.generate_save_with_bart_baseline(28, os.getcwd()+'/test_bart.mxl')"
    ]
   }
