--- a/test_generate.ipynb
+++ b/test_generate.ipynb
@@ -2,19 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 31,
    "id": "1e491e19",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/maximos/miniconda3/envs/torch/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import torch\n",
     "import torch.nn as nn\n",
@@ -29,19 +20,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 32,
    "id": "6ad30c26",
    "metadata": {},
    "outputs": [],
    "source": [
     "val_dir = '/media/maindisk/maximos/data/hooktheory_all12_test'\n",
+    "# val_dir = '/media/maindisk/maximos/data/gjt_melodies/Library_melodies/'\n",
     "tokenizer = CSGridMLMTokenizer(fixed_length=256)\n",
-    "val_dataset = CSGridMLMDataset(val_dir, tokenizer, 512)"
+    "# val_dataset = CSGridMLMDataset(val_dir, tokenizer, 512)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 33,
    "id": "6845a169",
    "metadata": {},
    "outputs": [],
@@ -53,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 34,
    "id": "02945c83",
    "metadata": {},
    "outputs": [
@@ -89,13 +81,14 @@
        ")"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "curriculum_type = 'random'\n",
+    "# curriculum_type = 'random'\n",
+    "curriculum_type = 'base2'\n",
     "device_name = 'cuda:1'\n",
     "if device_name == 'cpu':\n",
     "    device = torch.device('cpu')\n",
@@ -118,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 35,
    "id": "e9b8c333",
    "metadata": {},
    "outputs": [
@@ -143,26 +136,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 36,
    "id": "797e6f56",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/maximos/miniconda3/envs/torch/lib/python3.12/site-packages/music21/stream/base.py:3694: Music21DeprecationWarning: .flat is deprecated.  Call .flatten() instead\n",
-      "  return self.iter().getElementsByClass(classFilterList)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "encoded = tokenizer.encode(data_files[1473])"
+    "encoded = tokenizer.encode(data_files[333])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 37,
    "id": "dffcc448",
    "metadata": {},
    "outputs": [
@@ -180,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 38,
    "id": "52a3756c",
    "metadata": {},
    "outputs": [],
@@ -192,18 +176,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 39,
    "id": "cf7caa70",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "last_active_index: 243\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if curriculum_type == 'base2':\n",
     "    generated_harmony = structured_progressive_generate(\n",
@@ -213,7 +189,10 @@
     "        num_stages=10,\n",
     "        mask_token_id=tokenizer.mask_token_id,\n",
     "        temperature=1.0,\n",
-    "        strategy='topk'\n",
+    "        strategy='sample',#'topk',\n",
+    "        pad_token_id=pad_token_id,      # token ID for <pad>\n",
+    "        nc_token_id=nc_token_id,       # token ID for <nc>\n",
+    "        force_fill=True         # disallow <pad>/<nc> before melody ends\n",
     "    )\n",
     "else:\n",
     "    generated_harmony = random_progressive_generate(\n",
@@ -223,7 +202,7 @@
     "        num_stages=10,\n",
     "        mask_token_id=tokenizer.mask_token_id,\n",
     "        temperature=1.0,\n",
-    "        strategy='topk',\n",
+    "        strategy='sample',# 'topk',\n",
     "        pad_token_id=pad_token_id,      # token ID for <pad>\n",
     "        nc_token_id=nc_token_id,       # token ID for <nc>\n",
     "        force_fill=True         # disallow <pad>/<nc> before melody ends\n",
@@ -232,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 40,
    "id": "30a895ca",
    "metadata": {},
    "outputs": [
@@ -241,9 +220,9 @@
      "output_type": "stream",
      "text": [
       "output_tokens\n",
-      "['G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj']\n",
+      "['G#:maj', 'G#:maj', 'G#:maj', 'G#:maj', 'G#:maj', 'G#:maj', 'G#:maj', 'G#:maj', 'G#:maj', 'G#:maj', 'G#:maj', 'G#:maj', 'G#:maj', 'G#:maj', 'G#:maj', 'G#:maj', 'A#:min', 'A#:min', 'A#:min', 'A#:min', 'A#:min', 'A#:min', 'A#:min', 'A#:min', 'A#:min', 'A#:min', 'A#:min', 'A#:min', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'C#:maj', 'C#:maj', 'C#:maj', 'C#:maj', 'C#:maj', 'C#:maj', 'C#:maj', 'C#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'G#:maj', 'G#:maj', 'G#:maj', 'G#:maj', 'G#:maj', 'G#:maj', 'G#:maj', 'G#:maj', 'A#:min', 'A#:min', 'A#:min', 'A#:min', 'A#:min', 'A#:min', 'A#:min', 'A#:min', 'A#:min', 'A#:min', 'A#:min', 'A#:min', 'A#:min', 'A#:min', 'A#:min', 'A#:min', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>']\n",
       "harmony_gt_tokens\n",
-      "['B:7', 'B:7', 'B:7', 'B:7', 'B:7', 'B:7', 'B:7', 'B:7', 'B:7', 'B:7', 'B:7', 'B:7', 'B:7', 'B:7', 'B:min', 'B:min', 'B:min', 'B:min', 'B:min', 'B:min', 'B:min', 'B:min', 'B:min', 'B:min', 'B:min', 'B:min', 'B:min', 'B:min', 'B:min', 'B:min', 'B:min', 'B:min', 'A:maj', 'A:maj', 'A:maj', 'A:maj', 'A:maj', 'A:maj', 'A:maj', 'A:maj', 'A:maj', 'A:maj', 'A:maj', 'A:maj', 'A:maj', 'A:maj', 'A:maj', 'A:maj', 'F#:min7', 'F#:min7', 'F#:min7', 'F#:min7', 'F#:min7', 'F#:min7', 'F#:min7', 'F#:min7', 'F#:min7', 'F#:min7', 'F#:min7', 'F#:min7', 'F#:min7', 'F#:min7', 'F#:min7', 'F#:min7', 'F#:min7', 'F#:min7', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'B:min', 'B:min', 'B:min', 'B:min', 'B:min', 'B:min', 'B:min', 'B:min', 'B:min', 'B:min', 'B:min', 'B:min', 'B:min', 'B:min', 'B:min', 'B:min', 'A:maj', 'A:maj', 'A:maj', 'A:maj', 'A:maj', 'A:maj', 'A:maj', 'A:maj', 'A:maj', 'A:maj', 'A:maj', 'A:maj', 'A:maj', 'A:maj', 'A:maj', 'A:maj', 'F#:min7', 'F#:min7', 'F#:min7', 'F#:min7', 'F#:min7', 'F#:min7', 'F#:min7', 'F#:min7', 'F#:min7', 'F#:min7', 'F#:min7', 'F#:min7', 'F#:min7', 'F#:min7', 'F#:min7', 'F#:min7', 'F#:min7', 'F#:min7', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'B:min', 'B:min', 'B:min', 'B:min', 'B:min', 'B:min', 'B:min', 'B:min', 'B:min', 'B:min', 'B:min', 'B:min', 'B:min', 'B:min', 'B:min', 'B:min', 'A:maj', 'A:maj', 'A:maj', 'A:maj', 'A:maj', 'A:maj', 'A:maj', 'A:maj', 'A:maj', 'A:maj', 'A:maj', 'A:maj', 'A:maj', 'A:maj', 'A:maj', 'A:maj', 'F#:min7', 'F#:min7', 'F#:min7', 'F#:min7', 'F#:min7', 'F#:min7', 'F#:min7', 'F#:min7', 'F#:min7', 'F#:min7', 'F#:min7', 'F#:min7', 'F#:min7', 'F#:min7', 'F#:min7', 'F#:min7', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'B:min', 'B:min', 'B:min', 'B:min', 'B:min', 'B:min', 'B:min', 'B:min', 'B:min', 'B:min', 'B:min', 'B:min', 'B:min', 'B:min', 'B:min', 'B:min', 'A:maj', 'A:maj', 'A:maj', 'A:maj', 'A:maj', 'A:maj', 'A:maj', 'A:maj', 'A:maj', 'A:maj', 'A:maj', 'A:maj', 'A:maj', 'A:maj', 'A:maj', 'A:maj', 'F#:min7', 'F#:min7', 'F#:min7', 'F#:min7', 'F#:min7', 'F#:min7', 'F#:min7', 'F#:min7', 'F#:min7', 'F#:min7', 'F#:min7', 'F#:min7', 'F#:min7', 'F#:min7', 'F#:min7', 'F#:min7']\n"
+      "['C#:maj', 'C#:maj', 'C#:maj', 'C#:maj', 'C#:maj', 'C#:maj', 'C#:maj', 'C#:maj', 'C#:maj', 'C#:maj', 'C#:maj', 'C#:maj', 'C#:maj', 'C#:maj', 'C#:maj', 'C#:maj', 'C#:maj7', 'C#:maj7', 'C#:maj7', 'C#:maj7', 'C#:maj7', 'C#:maj7', 'C#:maj7', 'C#:maj7', 'C#:maj7', 'C#:maj7', 'C#:maj7', 'C#:maj7', 'C#:maj7', 'C#:maj7', 'C#:maj7', 'C#:maj7', 'A#:min7', 'A#:min7', 'A#:min7', 'A#:min7', 'A#:min7', 'A#:min7', 'A#:min7', 'A#:min7', 'A#:min7', 'A#:min7', 'A#:min7', 'A#:min7', 'A#:min7', 'A#:min7', 'A#:min7', 'A#:min7', 'C#:maj', 'C#:maj', 'C#:maj', 'C#:maj', 'C#:maj', 'C#:maj', 'C#:maj', 'C#:maj', 'C#:maj', 'C#:maj', 'C#:maj', 'C#:maj', 'C#:maj', 'C#:maj', 'C#:maj', 'C#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:min', 'F#:min', 'F#:min', 'F#:min', 'F#:min', 'F#:min', 'F#:min', 'F#:min', 'F#:min', 'F#:min', 'F#:min', 'F#:min', 'F#:min', 'F#:min', 'F#:min', 'F#:min', 'C#:maj', 'C#:maj', 'C#:maj', 'C#:maj', 'C#:maj', 'C#:maj', 'C#:maj', 'C#:maj', 'C#:maj', 'C#:maj', 'C#:maj', 'C#:maj', 'C#:maj', 'C#:maj', 'C#:maj', 'C#:maj', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>']\n"
      ]
     }
    ],
@@ -263,13 +242,106 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 41,
    "id": "99e6d2cc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/maximos/miniconda3/envs/torch/lib/python3.12/site-packages/music21/base.py:559: UserWarning: Setting an ID that could be mistaken for a memory location is discouraged: got 136749889296080\n",
+      "  warnings.warn(msg)\n"
+     ]
+    }
+   ],
    "source": [
     "score = overlay_generated_harmony(encoded['melody_part'], output_tokens, encoded['ql_per_quantum'], encoded['skip_steps'])\n",
     "save_harmonized_score(score, out_path=\"harmonized_output.mxl\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "71459b63",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0.0} <music21.metadata.Metadata object at 0x7c5fb2528830>\n",
+      "{0.0} <music21.stream.Part 0x7c5f90599520>\n",
+      "    {0.0} <music21.stream.Measure 1 offset=0.0>\n",
+      "        {0.0} <music21.clef.TrebleClef>\n",
+      "        {0.0} <music21.tempo.MetronomeMark allegretto Quarter=106>\n",
+      "        {0.0} <music21.key.KeySignature of 7 sharps>\n",
+      "        {0.0} <music21.meter.TimeSignature 4/4>\n",
+      "        {0.0} <music21.note.Note E->\n",
+      "        {1.5} <music21.note.Note F>\n",
+      "        {2.5} <music21.note.Note F>\n",
+      "    {4.0} <music21.stream.Measure 2 offset=4.0>\n",
+      "        {0.0} <music21.note.Note E->\n",
+      "        {1.0} <music21.note.Note F>\n",
+      "        {1.5} <music21.note.Note F>\n",
+      "        {2.5} <music21.note.Rest quarter>\n",
+      "        {3.5} <music21.note.Note B->\n",
+      "    {8.0} <music21.stream.Measure 3 offset=8.0>\n",
+      "        {0.0} <music21.note.Note E->\n",
+      "        {1.0} <music21.note.Note F>\n",
+      "        {1.5} <music21.note.Note F>\n",
+      "        {2.5} <music21.note.Note C#>\n",
+      "        {3.5} <music21.note.Note G#>\n",
+      "    {12.0} <music21.stream.Measure 4 offset=12.0>\n",
+      "        {0.0} <music21.note.Note B->\n",
+      "        {0.5} <music21.note.Note G#>\n",
+      "        {1.5} <music21.note.Note F>\n",
+      "        {1.75} <music21.note.Note E->\n",
+      "        {2.0} <music21.note.Note C#>\n",
+      "        {3.0} <music21.note.Rest quarter>\n",
+      "    {16.0} <music21.stream.Measure 5 offset=16.0>\n",
+      "        {0.0} <music21.note.Note G#>\n",
+      "        {1.0} <music21.note.Note C#>\n",
+      "        {1.5} <music21.note.Note C#>\n",
+      "        {2.5} <music21.note.Rest dotted-quarter>\n",
+      "    {20.0} <music21.stream.Measure 6 offset=20.0>\n",
+      "        {0.0} <music21.note.Note A>\n",
+      "        {1.0} <music21.note.Note C#>\n",
+      "        {1.5} <music21.note.Note C#>\n",
+      "        {2.5} <music21.note.Note E->\n",
+      "        {3.5} <music21.note.Note F>\n",
+      "    {24.0} <music21.stream.Measure 7 offset=24.0>\n",
+      "        {0.0} <music21.note.Note F>\n",
+      "        {1.0} <music21.note.Rest dotted-half>\n",
+      "        {4.0} <music21.bar.Barline type=final>\n",
+      "{0.0} <music21.stream.Part 0x7c5f907bf980>\n",
+      "    {0.0} <music21.stream.Measure 1 offset=0.0>\n",
+      "        {0.0} <music21.clef.TrebleClef>\n",
+      "        {0.0} <music21.tempo.MetronomeMark allegretto Quarter=106>\n",
+      "        {0.0} <music21.key.KeySignature of 7 sharps>\n",
+      "        {0.0} <music21.meter.TimeSignature 4/4>\n",
+      "        {0.0} <music21.chord.Chord G#3 B#3 D#4>\n",
+      "    {4.0} <music21.stream.Measure 2 offset=4.0>\n",
+      "        {0.0} <music21.chord.Chord B-3 D-4 F4>\n",
+      "        {3.0} <music21.chord.Chord F#3 A#3 C#4>\n",
+      "    {8.0} <music21.stream.Measure 3 offset=8.0>\n",
+      "        {0.0} <music21.chord.Chord F#3 A#3 C#4>\n",
+      "        {2.0} <music21.chord.Chord C#3 E#3 G#3>\n",
+      "    {12.0} <music21.stream.Measure 4 offset=12.0>\n",
+      "        {0.0} <music21.chord.Chord F#3 A#3 C#4>\n",
+      "        {2.0} <music21.chord.Chord G#3 B#3 D#4>\n",
+      "    {16.0} <music21.stream.Measure 5 offset=16.0>\n",
+      "        {0.0} <music21.chord.Chord B-3 D-4 F4>\n",
+      "    {20.0} <music21.stream.Measure 6 offset=20.0>\n",
+      "        {0.0} <music21.chord.Chord F#3 A#3 C#4>\n",
+      "    {24.0} <music21.stream.Measure 7 offset=24.0>\n",
+      "        {0.0} <music21.chord.Chord F#3 A#3 C#4>\n",
+      "        {1.0} <music21.bar.Barline type=final>\n"
+     ]
+    }
+   ],
+   "source": [
+    "score.show('t')"
    ]
   }
  ],
